crates/compiler/tests/parse_errors/if_then.elm
module Main exposing (..)

x =
    if True 1 else 2
